but the preliminary answer is NO -- the browser freezes and the plot
does not respond to mouse clicks while the data is loading.

DSL: Implement shape aesthetic with d3.svg.symbol()
https://github.com/mbostock/d3/wiki/SVG-Shapes#symbol_type

RENDER: Determine why border of tiles in pirates example does not seem to be rendering.

2016.01.28

Depend ggplot2 < 2.0.

2015.12.09 PR#125

BUGFIX: geom_widerect should now render properly in all
contexts. There was some problem when plot width << height which is
now fixed.

2015.12.03 PR#124

animint2gist stops with the new max of 300 files per gist.

2015.12.01 PR#119

animint2gist now stops with an error when there are over 40 files
(fixes #122) and when there is at least one file that is over 1MB,
which would be truncated (fixes #121).

Animations with geoms that have more than one chunk var start playing
immediately.

Compiler stops with an informative error "aes names must be unique"
when the same interactive aes appears multiple times,
e.g. aes(showSelected=var1, showSelected=var2)

2015.11.30

BUGFIX: axis hiding on maps works again, via 6 element_blank()s:
theme(axis.line=element_blank(), 
      axis.text=element_blank(), 
      axis.ticks=element_blank(), 
      axis.title=element_blank(),
      panel.background = element_blank(),
      panel.border = element_blank())

2015.11.01

BUGFIX: facet_grid(var ~ ., space="free") now uses the correct amount
of space between vertical panels, and we test for it in
test-renderer2-ChromHMMiterations.R.

BUGFIX: axis names are now correctly spaced in the middle between the
extreme panel edges.

2015.10.26

DSL: geom_1(aes(color=something))+geom_2(aes(color=something.else)) is
now an error. aes(color="constant") and aes(color=factor(x)) are also
errors. The idea is to force the designer to use informative and
consistent selector variable names for interactive legends.

DATA: PredictedPeaks and test-renderer2-PredictedPeaks.R
